Swagger: Update current pipeline at /pipeline/{id}
